--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,5 @@
-# ---------------------------------------------------------------------------
-# Activar RewriteEngine
-# ---------------------------------------------------------------------------
 RewriteEngine on
-
-# ---------------------------------------------------------------------------
-# Eliminar index.php
-# ---------------------------------------------------------------------------
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(index\.php|robots\.txt|sitemap\.xml|assets)
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteRule ^(.*)$ index.php?/$1 [L]
